# model-fit-api

./: .copier-answers.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  flux_jansky_dif.json  main.py  pyproject.toml  test_for_Fastapi.ipynb
.github/workflows/: build-documentation.yml  linting.yml  pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
benchmarks/: asv.conf.json
docs/: conf.py  index.rst  requirements.txt
src/model_fit_api/: __main__.py  app.py
tests/model_fit_api/: conftest.py  test_app.py  test_example_module.py  test_fixtures.py
