[project]
name = "model-fit-api"
version = "0.1.0"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Rizvan Ganeyev", email = "vyp6w52@mail.ru" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "astropy",
    "fastapi",
    "iminuit",  # sncosmo uses it for fitting
    "pandas",
    "pydantic",
    "sncosmo",
    "uvicorn[standard]",  # Used to run the debug server
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx", # Used to automatically generate documentation
    "sphinx-rtd-theme", # Used to render documentation
    "autodoc_pydantic[erdantic]", # Used to automatically generate api documentation for pydantic models
    "black", # Used for static linting of files
    "httpx", # Required by fastapi.testclient
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 110
target-version = ["py38"]
